syntax = "proto3";

option go_package = "github.com/AgentGuo/faas/pkg/funcdispatch/proto";

service FunctionService {
  rpc CallFunction(FunctionRequest) returns (FunctionResponse);
}

message FunctionRequest {
  string payload = 1;
  int64 requestId = 2;
}

message FunctionResponse {
  string payload = 1;
  int64 requestId = 2;
  int32 error_code = 3;
}